src/snapshots/green_tea__error__test__error_unexpected_keyword.snap
---
source: src/error.rs
expression: "Hello {% in %}"
---
Unexpected keyword: in. Expected one of: if, for

error: 
  ┌─ -test-:1:10
  │
1 │ Hello {% in %}
  │          ^^


